...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <Button
            android:id="@+id/edit_password_btn"
            android:layout_width="186.5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Change Password" />

        <Button
            android:id="@+id/delete_acc_btn"
            android:layout_width="186.5dp"
            android:layout_height="wrap_content"
            android:text="Delete Account"
            android:background="@drawable/rounded_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/edit_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Name:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_editable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="20sp"
            android:inputType="text"
            android:gravity="center_vertical"
...
            android:layout_height="match_parent"
            android:text="Age:"
            android:layout_weight="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/age_editable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="20sp"
            android:height="48dp"
            android:gravity="center_vertical"
...
            android:layout_height="match_parent"
            android:text="Weight:"
            android:layout_weight="1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/weight_editable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:height="48dp"
            android:gravity="center_vertical"
            android:inputType="text"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Height:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/height_editable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:height="48dp"
            android:gravity="center_vertical"
            android:inputType="text"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Phone:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:textSize="20sp" />



    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
...
