<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here"></EditText>

    </LinearLayout>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20dp"></TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"></EditText>

    </LinearLayout>
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="Login"
...
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="or"
            android:textSize="25sp" />

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="Signup"
            android:textColor="#ffffff"
...
