...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="349dp"
        android:layout_height="54dp"
        android:layout_marginBottom="144dp"
        android:hint="Old Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="349dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:hint="New Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="349dp"
        android:layout_height="54dp"
        android:layout_marginBottom="73dp"
        android:hint="Confirm New Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/change_password_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="180dp"
...
